# genial

./: README.md  pyproject.toml
atividades/: atividade_2_ga.ipynb  atividade_3_aco.ipynb  atividade_4_pso.ipynb
aulas/: aula_1_introducao.ipynb  aula_2_ag.ipynb
aulas/utils/funcoes_auxiliares/: animar_aco.py  animar_pso_2d.py  animar_pso_3d.py
